<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="28dp"
            android:text="@string/zero"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/white"
            android:textSize="60sp"/>
    </FrameLayout>


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonAC"
                style="@style/Gray.Button"
                android:onClick="onNumberClick"
                android:text="@string/AC_button" />


            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:layout_marginHorizontal="16dp"
                android:onClick="onOperationClick"
                android:text="@string/plus_minus" />


            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:onClick="onOperationClick"
                android:text="@string/percent" />


            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:layout_marginStart="16dp"
                android:onClick="onOperationClick"
                android:text="@string/division" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/DarkGray.Button"
                android:onClick="onNumberClick"
                android:text="@string/seven" />


            <com.google.android.material.button.MaterialButton
                style="@style/DarkGray.Button"
                android:layout_marginHorizontal="16dp"
                android:onClick="onNumberClick"
                android:text="@string/eight" />


            <com.google.android.material.button.MaterialButton
                style="@style/DarkGray.Button"
                android:onClick="onNumberClick"
                android:text="@string/nine" />


            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:layout_marginStart="16dp"
                android:onClick="onOperationClick"
                android:text="@string/multiply" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/DarkGray.Button"
                android:onClick="onNumberClick"
                android:text="@string/four" />


            <com.google.android.material.button.MaterialButton
                style="@style/DarkGray.Button"
                android:layout_marginHorizontal="16dp"
                android:onClick="onNumberClick"
                android:text="@string/five" />


            <com.google.android.material.button.MaterialButton
                style="@style/DarkGray.Button"
                android:onClick="onNumberClick"
                android:text="@string/six" />


            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:layout_marginStart="16dp"
                android:onClick="onOperationClick"
                android:text="@string/minus" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/DarkGray.Button"
                android:onClick="onNumberClick"
                android:text="@string/one" />


            <com.google.android.material.button.MaterialButton
                style="@style/DarkGray.Button"
                android:layout_marginHorizontal="16dp"
                android:onClick="onNumberClick"
                android:text="@string/two" />


            <com.google.android.material.button.MaterialButton
                style="@style/DarkGray.Button"
                android:onClick="onNumberClick"
                android:text="@string/three" />


            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:layout_marginStart="16dp"
                android:onClick="onOperationClick"
                android:text="@string/plus" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/DarkGray.Button"
                android:layout_width="176dp"
                android:onClick="onNumberClick"
                android:paddingStart="32dp"
                android:text="@string/zero"
                android:textAlignment="textStart" />


            <com.google.android.material.button.MaterialButton
                style="@style/DarkGray.Button"
                android:layout_marginHorizontal="16dp"
                android:onClick="onNumberClick"
                android:text="@string/dot" />


            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/equals" />


        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>